[gd_scene load_steps=3 format=3 uid="uid://cr646pbsg8bgl"]

[ext_resource type="Script" path="res://core/ui/config/modes/pursuit_configurator.gd" id="2_ih2sh"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5oukv"]
properties/0/path = NodePath("HBoxContainer/LapNumber:value")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("HBoxContainer2/TicketCount:value")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="PursuitConfigurator" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ih2sh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Laps"

[node name="LapNumber" type="SpinBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 16.0
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Tickets"

[node name="TicketCount" type="SpinBox" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 17.0
value = 1.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_5oukv")

[connection signal="value_changed" from="HBoxContainer/LapNumber" to="." method="_on_lap_number_value_changed"]
[connection signal="value_changed" from="HBoxContainer2/TicketCount" to="." method="_on_ticket_count_value_changed"]
